# HighloadServer

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  main.sh
include/: config.h  file_system.h  http.h  log.h  server.h
src/: config.c  file_system.c  http.c  main.c  server.c
